--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -173,10 +173,10 @@
                     <input type="email" id="booktable" class="form-control form-control-lg custom-form-control" placeholder="EMAIL">
                 </div>
                 <div class="col-sm-6 col-md-3 col-xs-12 my-2">
-                    <input type="number" id="booktable" class="form-control form-control-lg custom-form-control" placeholder="NUMBER OF GUESTS" max="20" min="0">
+                    <input type="number" id="booktable" class="form-control form-control-lg custom-form-control" placeholder="CELULAR" max="10" min="0">
                 </div>
                 <div class="col-sm-6 col-md-3 col-xs-12 my-2">
-                    <input type="time" id="booktable" class="form-control form-control-lg custom-form-control" placeholder="EMAIL">
+                    <input type="time" id="booktable" class="form-control form-control-lg custom-form-control" placeholder="HORA">
                 </div>
                 <div class="col-sm-6 col-md-3 col-xs-12 my-2">
                     <input type="date" id="booktable" class="form-control form-control-lg custom-form-control" placeholder="12/12/12">
